# cricinfo_app

./: .env  .gitignore  ReadMe.md  celerybeat-schedule  db.sqlite3  manage.py  pyproject.toml
cricinfo_app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
game/: models.py  serializers.py  tasks.py  urls.py  validators.py  views.py
game/migrations/: 0001_initial.py  0002_remove_game_is_completed_alter_game_date_created_and_more.py  0003_remove_game_date_created_remove_game_last_modified.py
